--- a/Project/src/App.css
+++ b/Project/src/App.css
@@ -84,3 +84,43 @@
     border-radius: 10px;
 }
 
+.textCold{
+    width: 544px;
+    height: 69px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 143%;
+    background: rgba(204, 176, 117, 0.5);
+    border-radius: 10px;
+}
+
+.catalog{
+    display: flex;
+    padding-top: 30px;
+}
+
+.buttonCatalog{ display: flex;
+    width: 177px;
+    height: 18px;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 152%;
+    padding: 30px 50px;
+    align-items: center;
+    border-radius: 8px;
+    background: rgb(235, 229, 229);
+    color: black;
+    border: 1px solid;
+}
+
+.buttonCatalog:hover{
+    transform: scale(1.1);
+    transition: 300ms;
+}
+
+.vids{
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
