--- a/Project/src/Components/Main/Main.module.css
+++ b/Project/src/Components/Main/Main.module.css
@@ -8,6 +8,7 @@
     display: flex;
     font-family: Montserrat;
     font-style: normal;
+    flex-direction: column;
 }
 
 .title{
@@ -19,10 +20,45 @@
     color: #2E363E;
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
-    
     font-size: 48px;
-    
     font-weight: 500;
     line-height: 60px;
     letter-spacing: -1px;
+}
+
+.mainFull{
+    width: 1180px;
+    height: 1786;
+    margin: 0 auto;
+}
+
+
+.overview{
+    width: 292px;
+    height: 237px;
+    margin: 50px 44px 50px 44px;
+}
+
+.creme{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 143%;
+}
+
+.cremecolor{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.price{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 150%;
+}
+
+.buttonprice{
+    width: 163px;
+    height: 68px;
+    margin: 20px 40px 20x 40px;
 }
