--- a/Project/src/Components/Main/Main.module.css
+++ b/Project/src/Components/Main/Main.module.css
@@ -27,9 +27,12 @@
 }
 
 .mainFull{
+    display: flex;
     width: 1180px;
     height: 1786;
     margin: 0 auto;
+    align-items: flex-start;
+    gap: 20px;
 }
 
 
@@ -57,8 +60,18 @@
     line-height: 150%;
 }
 
-.buttonprice{
-    width: 163px;
-    height: 68px;
-    margin: 20px 40px 20x 40px;
+.buttonPrice{display: flex;
+    width: 83px;
+    height: 28px;
+    padding: 20px 40px 20px 40px;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 152%;
+    
+    align-items: center;
+    border-radius: 8px;
+    background: rgba(235, 229, 229, 0.5);
+    color: black;
+    border: 1px solid;
 }
